[package]
name = "camigo-helpers-tests"
version = "0.0.1"
edition = "2018"

[dependencies]
camigo = { path = "../camigo" }
camigo-helpers = { path = "../camigo-helpers" }

[[test]]
name = "alloc-tests"
path = "src/alloc_root.rs"

[[test]]
name = "core-tests"
path = "src/core_root.rs"

[[test]]
name = "std-tests"
path = "src/std_root.rs"

[lints.rust]
warnings = "allow"
